# active-ai

./: CMakeLists.txt  README.md
shaders/: neuron.comp  render.frag  render.vert
src/: main.cpp  neural_net.cpp  neural_net.h
